[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name         = "meshtastic"
version      = "0.6.1"
license      = "MIT"
license-files = ["LICENSE*"]
description  = "Home Assistant Integration for Meshtastic"
readme       = "README.md"
authors      = [
    {name = "broglep", email = "example@gmail.com"}
]
requires-python = ">=3.13.0"

[project.urls]
"Homepage" = "https://github.com/meshtastic/home-assistant"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["custom_components*"]
